[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/arcade_64.tres" type="DynamicFont" id=2]

[node name="PauseMenu" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
z_index = 1

[node name="ResumeButton" type="Button" parent="Node2D"]
margin_left = 722.0
margin_top = 399.0
margin_right = 1167.0
margin_bottom = 558.0
custom_fonts/font = ExtResource( 2 )
text = "Resume"

[node name="StartMenuButton" type="Button" parent="Node2D"]
margin_left = 723.0
margin_top = 610.0
margin_right = 1168.0
margin_bottom = 773.0
custom_fonts/font = ExtResource( 2 )
text = "Main Menu"

[node name="SettingsButton" type="Button" parent="Node2D"]
visible = false
margin_left = 909.0
margin_top = 22.0
margin_right = 996.0
margin_bottom = 90.0
text = "Settings"

[node name="Node2D" type="Node2D" parent="Node2D"]
z_index = -1

[node name="DarkOverlay" type="ColorRect" parent="Node2D/Node2D"]
margin_right = 1925.0
margin_bottom = 1088.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.501961 )

[connection signal="pressed" from="Node2D/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Node2D/StartMenuButton" to="." method="_on_StartMenuButton_pressed"]
[connection signal="pressed" from="Node2D/SettingsButton" to="." method="_on_SettingsButton_pressed"]
